test: add unit tests for DepartmentUseCase and CityUseCase